package in_myfiles.behavioral_pattern.chain_of_responsibility

class CategoryItem : HomeItem() {
    override fun bindLayout() {
        println("Category layout: created")
    }
}